@@ -1,3 +1,9 @@
+2009-09-05  Alberto Garcia  <agarcia@igalia.com>
+
+	* src/vgl-server.c:
+	Define VglServerData struct for storing built-in server
+	information.
+
 2009-09-04  Alberto Garcia  <agarcia@igalia.com>
 
 	* src/controller.c
